# parole-bot

./: .gitignore  Cargo.toml  README.md
assets/: letter_frequencies.rs  valid_guesses.rs  word_freqs.rs  word_freqs_big.rs  wordlist.rs  words_freqs.rs
evaluation/: evaluation.rs
simulations/: script.py  simulation.rs
src/: app.rs  main.rs  solver.rs  ui.rs
