[package]
name = "parole-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.1"
rand = "0.8.5"
csv = "1.1.6"

[[bin]]
name = "tui-app"
path = "src/main.rs"  

[[bin]]
name = "simulations"
path = "simulations/simulation.rs"
